Add more explanation to easy to understand

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -9,6 +9,8 @@
 
   This option enables that alphabets with diacritical mark and alphabets without diacritical mark regarded as the same character as below.
 
+  We can confirm that can get `ngoằn` with `ngoan` in the following example.
+
   ```
   table_create --name Contents --flags TABLE_HASH_KEY --key_type ShortText
   column_create --table Contents --name content --type ShortText
@@ -68,13 +70,15 @@
 
 * Added support for [simdjson](https://simdjson.org/).
 
-  This keeps RapidJSON support but we'll remove RapidJSON support later.
+  Currently, we keeps RapidJSON support but we'll remove RapidJSON support later.
 
 * [{doc}`/install/ubuntu`] Dropped support for Ubuntu 23.10 (Mantic Minotaur)
 
   Because Ubuntu 23.10 reached EOL at July 11, 2024.
 
 * Distributed the install packages which enabled libedit.
+
+  Now in Groonga REPL, we can refer to the command history using the up arrow key.
 
 ### Fixes
 
@@ -89,16 +93,16 @@
     * `--log-path <path>`
     * `--query-log-path <path>`
 
-  2. Log rotate is enabled by specification the following options.
+  2. When log rotate is enabled by specification the following options.
 
     * `--log-rotate-threshold-size <threshold>`
     * `--query-log-rotate-threshold-size <threshold>`
 
-  3. Process ID log output is enabled by specification the following options.
+  3. When process ID log output is enabled by specification the following options.
 
     * `--log-flags process_id`
 
-* Fixed a bug if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`, Groonga use bundled Onigmo. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
+* Fixed a bug that Groonga use bundled Onigmo even if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
 
 ### Thanks
 
