Add missing markup

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -76,7 +76,7 @@
 
   Because Ubuntu 23.10 reached EOL at July 11, 2024.
 
-* Distributed the install packages which enabled libedit.
+* Distributed the install packages which enabled `libedit`.
 
   Now in Groonga REPL, we can refer to the command history using the up arrow key.
 
