Rename normalizer name

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -5,7 +5,7 @@
 
 ### Improvements
 
-* [NormalizerNFKC] Added a new option `unify_alphabet_diacritical_mark`.[pgroonga/pgroonga#418][Reported by Man Hoang]
+* [NormalizerNFKC] Added a new option `unify_latin_alphabet_with`.[pgroonga/pgroonga#418][Reported by Man Hoang]
 
   This option enables that alphabets with diacritical mark and alphabets without diacritical mark regarded as the same character as below.
 
@@ -24,7 +24,7 @@
     --flags TABLE_PAT_KEY \
     --key_type ShortText \
     --default_tokenizer TokenBigram \
-    --normalizer NormalizerNFKC150("unify_alphabet_diacritical_mark", true)
+    --normalizer 'NormalizerNFKC150("unify_latin_alphabet_with", true)'
   column_create \
     --table Terms \
     --name index_content \
