--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -14,7 +14,7 @@
   ```
   table_create --name Contents --flags TABLE_HASH_KEY --key_type ShortText
   column_create --table Contents --name content --type ShortText
-  load --table Site
+  load --table Contents
   [
     {"_key":"1", "content":"con đường ngoằn nghoèo"},
   ]
