Add more explanation to easy to undestand

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -9,6 +9,9 @@
 
   This option enables that alphabets with diacritical mark and alphabets without diacritical mark regarded as the same character as below.
 
+  However, this feature focus on only "LATIN (SMALL|CAPITAL) LETTER X WITH XXX".
+  It doesn't support "LATIN (SMALL|CAPITAL) LETTER X" + "COMBINING XXX" characters.
+
   We can confirm that can get `ngoằn` with `ngoan` in the following example.
 
   ```
