Add missing markup

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -107,10 +107,10 @@
 
 * Fixed a bug that Groonga use bundled Onigmo even if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
 
-* [Normalizer] Fixed a bug that U+0130 is normalized to U+0069 U+0307.
+* [Normalizer] Fixed a bug that `U+0130` is normalized to `U+0069` + `U+0307`.
 
-  The lowercase of "U+0130 LATIN CAPITAL LETTER I WITH DOT ABOVE" must be "U+0069 LATIN SMALL LETTER I".
-  But the current implementation uses "U+0069 LATIN SMALL LETTER I" + "U+0307 COMBINING DOT ABOVE".
+  The lowercase of `U+0130 LATIN CAPITAL LETTER I WITH DOT ABOVE` must be `U+0069 LATIN SMALL LETTER I`.
+  But the current implementation uses `U+0069 LATIN SMALL LETTER I` + `U+0307 COMBINING DOT ABOVE`.
 
 ### Thanks
 
