doc news: add 14.0.7 entry (#1911)
Co-authored-by: takuya kodama <a.s.takuya1026@gmail.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,122 @@
 # News - 14 series
 
+(release-14-0-7)=
+## Release 14.0.7 - 2024-09-03
+
+### Improvements
+
+* [NormalizerNFKC] Added a new option `unify_latin_alphabet_with`.[pgroonga/pgroonga#418][Reported by Man Hoang]
+
+  This option enables that alphabets with diacritical mark and alphabets without diacritical mark regarded as the same character as below.
+
+  However, this feature focus on only `LATIN (SMALL|CAPITAL) LETTER X WITH XXX`.
+  It doesn't support `LATIN (SMALL|CAPITAL) LETTER X` + `COMBINING XXX` characters.
+
+  We can confirm that can get `ngoằn` with `ngoan` in the following example.
+
+  ```
+  table_create --name Contents --flags TABLE_HASH_KEY --key_type ShortText
+  column_create --table Contents --name content --type ShortText
+  load --table Contents
+  [
+    {"_key":"1", "content":"con đường ngoằn nghoèo"},
+  ]
+
+  table_create \
+    --name Terms \
+    --flags TABLE_PAT_KEY \
+    --key_type ShortText \
+    --default_tokenizer TokenBigram \
+    --normalizer 'NormalizerNFKC150("unify_latin_alphabet_with", true)'
+  column_create \
+    --table Terms \
+    --name index_content \
+    --flags COLUMN_INDEX|WITH_POSITION \
+    --type Contents \
+    --source content
+
+  select --table Contents --query content:@ngoan
+  [
+    [
+      0,
+      0.0,
+      0.0
+    ],
+    [
+      [
+        [
+          1
+        ],
+        [
+          [
+            "_id",
+            "UInt32"
+          ],
+          [
+            "_key",
+            "ShortText"
+          ],
+          [
+            "content",
+            "ShortText"
+          ]
+        ],
+        [
+          1,
+          "1",
+          "con đường ngoằn nghoèo"
+        ]
+      ]
+    ]
+  ]
+  ```
+
+* Added support for [simdjson](https://simdjson.org/).
+
+  Currently, we keeps RapidJSON support but we'll remove RapidJSON support later.
+
+* [{doc}`/install/ubuntu`] Dropped support for Ubuntu 23.10 (Mantic Minotaur)
+
+  Because Ubuntu 23.10 reached EOL at July 11, 2024.
+
+* Distributed the install packages which enabled `libedit`.
+
+  Now in Groonga REPL, we can refer to the command history using the up arrow key.
+
+### Fixes
+
+* [status] Fixed a bug that "h3" is never shown in `groonga --version`/`status`.
+
+* Fixed a crash bug when log rotate is enabled.
+
+  This bug occurred in the following conditions.
+
+  1. When logging to a file by specification the following options.
+
+    * `--log-path <path>`
+    * `--query-log-path <path>`
+
+  2. When log rotate is enabled by specification the following options.
+
+    * `--log-rotate-threshold-size <threshold>`
+    * `--query-log-rotate-threshold-size <threshold>`
+
+  3. When process ID log output is enabled by specification the following options.
+
+    * `--log-flags process_id`
+
+* Fixed a bug that Groonga use bundled Onigmo even if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
+
+* [Normalizer] Fixed a bug that `U+0130` is normalized to `U+0069` + `U+0307`.
+
+  The lowercase of `U+0130 LATIN CAPITAL LETTER I WITH DOT ABOVE` must be `U+0069 LATIN SMALL LETTER I`.
+  But the current implementation uses `U+0069 LATIN SMALL LETTER I` + `U+0307 COMBINING DOT ABOVE`.
+
+### Thanks
+
+  * Man Hoang
+  * Biswapriyo Nath
+
 (release-14-0-6)=
 ## Release 14.0.6 - 2024-07-29
 
