--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.0.7-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Tue, 03 Sep 2024 02:52:03 -0000
+
 groonga (14.0.6-1) unstable; urgency=low
 
   * New upstream release.
