--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -71,6 +71,15 @@
   ]
   ```
 
+  ```{note}
+  Current normalizers has the following bug.
+
+  The lowercase of `U+0130 LATIN CAPITAL LETTER I WITH DOT ABOVE` must be `U+0069 LATIN SMALL LETTER I`.
+  But the current implementation uses `U+0069 LATIN SMALL LETTER I` + `U+0307 COMBINING DOT ABOVE`.
+
+  We will fix the bug from NormalizerNFKC160.
+  ```
+
 * Added support for [simdjson](https://simdjson.org/).
 
   Currently, we keeps RapidJSON support but we'll remove RapidJSON support later.
@@ -106,11 +115,6 @@
     * `--log-flags process_id`
 
 * Fixed a bug that Groonga use bundled Onigmo even if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
-
-* [Normalizer] Fixed a bug that `U+0130` is normalized to `U+0069` + `U+0307`.
-
-  The lowercase of `U+0130 LATIN CAPITAL LETTER I WITH DOT ABOVE` must be `U+0069 LATIN SMALL LETTER I`.
-  But the current implementation uses `U+0069 LATIN SMALL LETTER I` + `U+0307 COMBINING DOT ABOVE`.
 
 ### Thanks
 
