--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,27 @@
 # News - 14 series
 
+(release-14-0-8)=
+## Release 14.0.8 - 2024-09-25
+
+### Improvements
+
+* [Amazon Linux 2023] Added support for Amazon Linux 2023. [GH-1845][Reported by takoyaki-nyokki and Watson]
+
+  However, we don't support Amazon Linux 2023 for aarch64.
+  Because the time of build for package of aarch64 is too time consuming.
+
+  We don't use TokenMecab on Amazon Linux 2023.
+  Because Amazon Linux 2023 doesn't provide MeCab package.
+
+### Fixes
+
+* Fixed a crash bug on Windows when we specify `pgroonga.log_type` on PGroonga.
+
+### THnaks
+
+* takoyaki-nyokki
+* Watson
+
 (release-14-0-7)=
 ## Release 14.0.7 - 2024-09-03
 
