--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -17,7 +17,7 @@
 
 * Fixed a crash bug on Windows when we specify `pgroonga.log_type` on PGroonga.
 
-### THnaks
+### Thanks
 
 * takoyaki-nyokki
 * Watson
