--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,15 +7,15 @@
 
 * [Amazon Linux 2023] Added support for Amazon Linux 2023. [GH-1845][Reported by takoyaki-nyokki and Watson]
 
-  However, we don't support Amazon Linux 2023 for aarch64.
-  Because the time of build for package of aarch64 is too time consuming.
+  However, we don't support Amazon Linux 2023 for aarch64 currently.
+  Because the maintenance costly because of the time of build for package of aarch64 is too time consuming.
 
-  We don't use TokenMecab on Amazon Linux 2023.
+  We don't use TokenMecab on Groonga for Amazon Linux 2023.
   Because Amazon Linux 2023 doesn't provide MeCab package.
 
 ### Fixes
 
-* Fixed a crash bug on Windows when we specify `pgroonga.log_type` on PGroonga.
+* Fixed a crash bug when we specify `pgroonga.log_type` on PGroonga for Windows.
 
 ### Thanks
 
