Fix worng English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -8,7 +8,7 @@
 * [Amazon Linux 2023] Added support for Amazon Linux 2023. [GH-1845][Reported by takoyaki-nyokki and Watson]
 
   However, we don't support Amazon Linux 2023 for aarch64 currently.
-  Because the maintenance costly because of the time of build for package of aarch64 is too time consuming.
+  Because the maintenance is costly because of the time of building a package for aarch64 is too time consuming.
 
   We don't use TokenMecab on Groonga for Amazon Linux 2023.
   Because Amazon Linux 2023 doesn't provide MeCab package.
