Fix worng English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -10,7 +10,7 @@
   However, we don't support Amazon Linux 2023 for aarch64 currently.
   Because the maintenance is costly because of the time of building a package for aarch64 is too time consuming.
 
-  We don't use TokenMecab on Groonga for Amazon Linux 2023.
+  We don't use TokenMecab in Groonga for Amazon Linux 2023.
   Because Amazon Linux 2023 doesn't provide MeCab package.
 
 ### Fixes
