Fix worng English
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -15,7 +15,7 @@
 
 ### Fixes
 
-* Fixed a crash bug when we specify `pgroonga.log_type` on PGroonga for Windows.
+* Fixed a crash bug when we specified `pgroonga.log_type` on PGroonga for Windows.
 
 ### Thanks
 
