doc news: add 14.0.8 entry (#1960)
Co-authored-by: takuya kodama <otegami@clear-code.com>

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,27 @@
 # News - 14 series
 
+(release-14-0-8)=
+## Release 14.0.8 - 2024-09-25
+
+### Improvements
+
+* [Amazon Linux 2023] Added support for Amazon Linux 2023. [GH-1845][Reported by takoyaki-nyokki and Watson]
+
+  However, we don't support Amazon Linux 2023 for aarch64 currently.
+  Because the maintenance is costly because of the time of building a package for aarch64 is too time consuming.
+
+  We don't use TokenMecab in Groonga for Amazon Linux 2023.
+  Because Amazon Linux 2023 doesn't provide MeCab package.
+
+### Fixes
+
+* Fixed a crash bug when we specified `pgroonga.log_type` on PGroonga for Windows.
+
+### Thanks
+
+* takoyaki-nyokki
+* Watson
+
 (release-14-0-7)=
 ## Release 14.0.7 - 2024-09-03
 
