--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.0.8-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Tue, 24 Sep 2024 09:12:02 -0000
+
 groonga (14.0.7-1) unstable; urgency=low
 
   * New upstream release.
