--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,12 @@
 # News - 14 series
 
+(release-14-0-9)=
+## Release 14.0.9 - 2024-09-27
+
+### Fixes
+
+* Fixed build error when we build from source on Alpine Linux 3.20.
+
 (release-14-0-8)=
 ## Release 14.0.8 - 2024-09-25
 
