--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_table.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_table.po
@@ -15,9 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_table``"
 msgstr ""
 
@@ -33,20 +30,5 @@ msgstr "例"
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "tableのレコードを特定の条件でグループ化します。"
-msgstr ""
-
-msgid "対象tableを指定します。"
-msgstr ""
-
-msgid "group化キー構造体の配列へのポインタを指定します。"
-msgstr ""
-
-msgid "group化キー構造体の配列のサイズを指定します。"
-msgstr ""
-
-msgid "group化の結果を格納する構造体の配列へのポインタを指定します。"
-msgstr ""
-
-msgid "group化の結果を格納する構造体の配列のサイズを指定します。"
-msgstr ""
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
