--- a/doc/locale/ja/LC_MESSAGES/install/centos.po
+++ b/doc/locale/ja/LC_MESSAGES/install/centos.po
@@ -19,62 +19,11 @@ msgstr ""
 msgid "CentOS"
 msgstr ""
 
-msgid "This section describes how to install Groonga related RPM packages on CentOS. You can install them by ``yum``."
-msgstr "このセクションではCentOS上でGroonga関連のRPMパッケージをインストールする方法を説明します。これらのパッケージは ``yum`` でインストールできます。"
+msgid "Support for Groonga has ended from version 14.0.5 because of CentOS 7’s EOL."
+msgstr "CentOS 7がEOLになったのでGroonga 14.0.5以降はCentOS 7用パッケージを提供していません。"
 
-msgid "We distribute both 32-bit and 64-bit packages but we strongly recommend a 64-bit package for server. You should use a 32-bit package just only for tests or development. You will encounter an out of memory error with a 32-bit package even if you just process medium size data."
-msgstr "32-bit用と64-bit用のパッケージを配布していますが、サーバ用途には64-bitパッケージを利用することをオススメします。32-bit用パッケージはテスト用か開発用にだけ使って下さい。32-bit用パッケージを使った場合は、中程度のサイズのデータでもメモリ不足エラーになることがあります。"
+msgid "Groonga supports AlmaLinux. So you can continue using Groonga by switching from CentOS 7 to AlmaLinux."
+msgstr "Groongaは、AlmaLinuxをサポートしているので、CentOS 7からAlmaLinuxにOSを切り替えることで引続きGroongaを利用できます。"
 
-msgid "CentOS 7"
-msgstr ""
-
-msgid "Install::"
-msgstr "インストール::"
-
-msgid "If you want to use `MeCab <https://taku910.github.io/mecab/>`_ as a tokenizer, install groonga-tokenizer-mecab package."
-msgstr "`MeCab <https://taku910.github.io/mecab/>`_ をトークナイザーとして使いたいときは、groonga-tokenizer-mecabパッケージをインストールしてください。"
-
-msgid "Install groonga-tokenizer-mecab package::"
-msgstr "groonga-tokenizer-mecabパッケージのインストール::"
-
-msgid "There is a package that provides `Munin <http://munin-monitoring.org/>`_ plugins. If you want to monitor Groonga status by Munin, install groonga-munin-plugins package."
-msgstr "`Munin <http://munin-monitoring.org/>`_ プラグインを提供するパッケージもあります。MuninでGroongaの状態をモニターしたい場合は、groonga-munin-pluginsパッケージをインストールしてください。"
-
-msgid "Install groonga-munin-plugins package::"
-msgstr "groonga-munin-pluginsパッケージのインストール::"
-
-msgid "There is a package that provides MySQL compatible normalizer as a Groonga plugin. If you want to use that one, install groonga-normalizer-mysql package."
-msgstr "MySQL互換のノーマライザーをGroongaのプラグインとして提供するパッケージがあります。MySQL互換のノーマライザーを使うには ``groonga-normalizer-mysql`` パッケージをインストールしてください。"
-
-msgid "Install groonga-normalizer-mysql package::"
-msgstr "groonga-normalizer-mysqlパッケージのインストール::"
-
-msgid "Build from source"
-msgstr "ソースからビルド"
-
-msgid "Install required packages to build Groonga::"
-msgstr "Groongaをビルドするために必要なパッケージをインストールします::"
-
-msgid "Download source::"
-msgstr "ソースをダウンロードします::"
-
-msgid "Configure (see :ref:`source-configure` about ``configure`` options)::"
-msgstr "configureを実行します（ ``configure`` のオプションについては :ref:`source-configure` を参照してください）::"
-
-msgid "Build::"
-msgstr "ビルド::"
-
-msgid "``groonga`` package is the minimum set of fulltext search engine. If you want to use Groonga for server use, you can install additional preconfigured packages."
-msgstr "``groonga`` パッケージは全文検索のための最小構成パッケージです。Groongaをサーバー用途で使うなら、設定済みの追加パッケージをインストールすることができます。"
-
-msgid "There are two packages for server use."
-msgstr "サーバー用途のための2つのパッケージがあります。"
-
-msgid ":doc:`/reference/executables/groonga-server-http` (HTTP based server package)"
-msgstr ":doc:`/reference/executables/groonga-server-http` （HTTPベースのサーバーパッケージ）"
-
-msgid "groonga-server-gqtp (GQTP based server package)"
-msgstr "groonga-server-gqtp （GQTPベースのサーバーパッケージ）"
-
-msgid "See :doc:`/server` section about details."
-msgstr "詳細は :doc:`/server` を参照してください。"
+msgid "See also :doc:`/install/almalinux`."
+msgstr ":doc:`/install/almalinux`を参照してください。"
