docs: troubleshooting: `default-match-escalation-threshold` setting is specified by groonga option

--- a/doc/locale/ja/LC_MESSAGES/troubleshooting/different_results_with_the_same_keyword.po
+++ b/doc/locale/ja/LC_MESSAGES/troubleshooting/different_results_with_the_same_keyword.po
@@ -163,7 +163,7 @@ msgstr ""
 msgid "対策方法2: 閾値をあげる"
 msgstr ""
 
-msgid "非わかち書き検索・部分一致検索を利用するかどうかの閾値は--with-match-escalation-threshold configureオプションで変更することができます。以下のように指定すると、100件以下のヒット数であれば、たとえ完全一致検索でヒットしても、非わかち書き検索・部分一致検索を行います。::"
+msgid "非わかち書き検索・部分一致検索を利用するかどうかの閾値は ``--default-match-escalation-threshold`` オプションで変更することができます。以下のように指定すると、100件以下のヒット数であれば、たとえ完全一致検索でヒットしても、非わかち書き検索・部分一致検索を行います。::"
 msgstr ""
 
 msgid "この場合も対策方法1同様、検索ノイズが上位に現れる可能性が高くなることに注意してください。検索ノイズが多くなった場合は指定する値を低くする必要があります。"
