--- a/doc/locale/ja/LC_MESSAGES/install/cmake.po
+++ b/doc/locale/ja/LC_MESSAGES/install/cmake.po
@@ -44,7 +44,7 @@ msgid "Windows"
 msgstr ""
 
 msgid "[Microsoft Visual Studio Community](https://visualstudio.microsoft.com/vs/community/)"
-msgstr ""
+msgstr "[Microsoft Visual Studio Community](https://visualstudio.microsoft.com/ja/vs/community/)"
 
 msgid "Download source"
 msgstr "ソースコードのダウンロード"
