--- a/doc/locale/ja/LC_MESSAGES/install/cmake.po
+++ b/doc/locale/ja/LC_MESSAGES/install/cmake.po
@@ -22,29 +22,53 @@ msgstr "その他: CMakeを使ってビルド"
 msgid "This document describes how to build Groonga from source with CMake."
 msgstr "このドキュメントはCMakeを使ってソースコードからGroongaをビルドする方法を説明します。"
 
-msgid "To get more details about installing Groonga from the source with CMake on a specific environment, find the document for the specific environment from {doc}`/install`."
-msgstr "{doc}`/install` にある特定環境用のドキュメントに、CMakeでビルドする際のその環境向けのより詳細な情報があります。特定環境用のドキュメントがある場合は、まずそちらを参照してください。"
-
 msgid "Install depended software"
 msgstr "必要なソフトウェアのインストール"
 
 msgid "Here is depended software for GNU/Linux, UNIX and Windows."
 msgstr "以下は、GNU/Linux、UNIX、Windows向けの必要なソフトウェアの一覧です。"
 
-msgid "TODO"
-msgstr ""
-
 msgid "GNU/Linux or UNIX"
 msgstr "GNU/LinuxまたはUNIX"
 
-msgid "[CMake](http://www.cmake.org/)"
+msgid "Debian GNU/Linux, Ubuntu"
 msgstr ""
+
+msgid "Execute `setup.sh` included in the source code."
+msgstr "ソースコードに含まれる`setup.sh`を実行してください。"
+
+msgid "If `groonga-14.0.9.tar.gz` is expanded, it is `groonga-14.0.9/setup.sh`."
+msgstr "`groonga-14.0.9.tar.gz`を展開した場合は`groonga-14.0.9/setup.sh`がそのスクリプトです。"
+
+msgid "Amazon Linux 2023"
+msgstr ""
+
+msgid "You can run the following commands to install the required packages."
+msgstr "以下のコマンドを実行して必要なパッケージをインストールします。"
+
+msgid "You can install Apache Arrow following to [the official installation procedure](https://arrow.apache.org/install/)."
+msgstr "Apache Arrowは [公式のドキュメントの手順](https://arrow.apache.org/install/) にしたがってインストールしてください。"
+
+msgid "AlmaLinux 9"
+msgstr ""
+
+msgid "macOS"
+msgstr ""
+
+msgid "Install [Xcode](https://developer.apple.com/xcode/)."
+msgstr "[Xcode](https://developer.apple.com/xcode/)をインストールしてください。"
+
+msgid "Execute the following command in the extracted source code directory."
+msgstr "ソースコードのディレクトリに移動して以下のコマンドを実行してください。"
 
 msgid "Windows"
 msgstr ""
 
 msgid "[Microsoft Visual Studio Community](https://visualstudio.microsoft.com/vs/community/)"
 msgstr "[Microsoft Visual Studio Community](https://visualstudio.microsoft.com/ja/vs/community/)"
+
+msgid "[CMake](http://www.cmake.org/)"
+msgstr ""
 
 msgid "Download source"
 msgstr "ソースコードのダウンロード"
@@ -171,9 +195,6 @@ msgstr "Apache Arrowサポートを有効化します。"
 
 msgid "In addition to using Apache Arrow IPC streaming format output, you can also use multithreading processing that is used in {ref}`select-n-workers` and {doc}`/reference/functions/query_parallel_or` with the Apache Arrow support."
 msgstr "Apache Arrowサポートを有効化すると、Apache ArrowのIPC streaming formatが使えるだけでなく、 {ref}`select-n-workers` や {doc}`/reference/functions/query_parallel_or` でマルチスレッドで処理できるようになります。"
-
-msgid "You can install Apache Arrow following to [the official installation procedure](https://arrow.apache.org/install/)."
-msgstr "Apache Arrowは [公式のドキュメントの手順](https://arrow.apache.org/install/) にしたがってインストールしてください。"
 
 msgid "Here is an example how to enable the Apache Arrow support."
 msgstr "以下はApache Arrowサポートを有効にする例です。"
